@@ -109,11 +109,11 @@
         <jsf-ext.version>0.2</jsf-ext.version>
         <woodstock.version>4.0.2.10</woodstock.version>
         <jaxrpc-api.version>1.1</jaxrpc-api.version>
-        <grizzly.version>2.2.10</grizzly.version>
+        <grizzly.version>2.2.11</grizzly.version>
         <jsr181-api.version>1.0-MR1</jsr181-api.version>
         <saaj-api.version>1.3.4</saaj-api.version>
-        <hk2.version>2.0.5</hk2.version>
-        <hk2.plugin.version>2.0.5</hk2.plugin.version>
+        <hk2.version>2.1.9</hk2.version>
+        <hk2.plugin.version>2.1.9</hk2.plugin.version>
         <trilead-ssh2.version>build212-hudson-6</trilead-ssh2.version>
         <product.name>GlassFish Server Open Source Edition</product.name>
         <brief_product_name>GlassFish Server</brief_product_name>
@@ -158,7 +158,7 @@
         <javadb.version>10.8.1.2</javadb.version>
         <jaxr.version>JAXR_RA_20091012</jaxr.version>
         <weld.version>1.1.4.Final</weld.version>
-        <jersey.version>2.0-m05</jersey.version>
+        <jersey.version>2.0-m05-1</jersey.version>
         <jbi.version>1.0</jbi.version>
         <wsdl4j.version>1.6.2</wsdl4j.version>
         <glassfish-management-api.version>3.1.0-b001</glassfish-management-api.version>
@@ -249,7 +249,7 @@
             <plugins>
                 <plugin>
                     <groupId>org.glassfish.hk2</groupId>
-                    <artifactId>hk2-maven-plugin</artifactId>
+                    <artifactId>hk2-inhabitant-generator</artifactId>
                     <version>${hk2.plugin.version}</version>
                 </plugin>
                 <plugin>
@@ -275,21 +275,22 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version> 2.0.1 </version>
+                    <version> 2.3.4 </version>
                 </plugin>
-                <plugin>
+               <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version> 2.0.2 </version>
+                    <version>2.4</version>
                     <configuration>
-                       <source>1.6</source>
-                       <target>1.6</target>
+                        <compilerArgument>-Djava.endorsed.dirs=${project.build.directory}/endorsed</compilerArgument>
+                        <source>1.6</source>
+                        <target>1.6</target>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version> 2.2 </version>
+                    <version> 2.4 </version>
                 </plugin>
                 <plugin>
                     <groupId>org.glassfish.build</groupId>
@@ -445,6 +446,133 @@
                     </executions>
             </plugin>
 
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <configuration>
+                          <silent>true</silent>
+                          <outputFile>${project.build.directory}/classpath.txt</outputFile>
+                        </configuration>
+                        <goals>
+                            <goal>build-classpath</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.glassfish.hk2</groupId>
+                <artifactId>config-generator</artifactId>
+                <version>${hk2.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <configuration>
+                            <classpath>${project.build.directory}/classpath.txt</classpath>
+                        </configuration>
+
+                        <goals>
+                            <goal>generateInjectors</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-generation</id>
+                        <configuration>
+                            <classpath>${project.build.directory}/classpath.txt</classpath>
+                            <test>true</test>
+                        </configuration>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>generateInjectors</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>build-helper-maven-plugin</artifactId>
+              <version>1.7</version>
+              <executions>
+                <execution>
+                  <id>add-source</id>
+                  <phase>generate-sources</phase>
+                  <goals>
+                    <goal>add-source</goal>
+                  </goals>
+                  <configuration>
+                    <sources>
+                      <source>target/generated-sources/hk2-config-generator/src/main/java</source>
+                    </sources>
+                  </configuration>
+                </execution>
+                <execution>
+                  <id>add-test-source</id>
+                  <phase>generate-test-sources</phase>
+                  <goals>
+                    <goal>add-test-source</goal>
+                  </goals>
+                  <configuration>
+                    <sources>
+                      <source>target/generated-sources/hk2-config-generator/src/test/java</source>
+                    </sources>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.glassfish.hk2</groupId>
+                <artifactId>hk2-inhabitant-generator</artifactId>
+                <executions>
+                    <execution>
+                        <configuration>
+                            <noswap>true</noswap>
+                            <classpath>${project.build.directory}/classpath.txt</classpath>
+                        </configuration>
+                        <goals>
+                            <goal>generateInhabitants</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test</id>
+                        <phase>process-test-classes</phase>
+                        <configuration>
+                            <test>true</test>
+                            <classpath>${project.build.directory}/classpath.txt</classpath>
+                        </configuration>
+                        <goals>
+                            <goal>generateInhabitants</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+          <downloadSources>true</downloadSources>
+          <downloadJavadocs>true</downloadJavadocs>
+          <addGroupIdToProjectName>true</addGroupIdToProjectName>
+        </configuration>
+      </plugin>
+
+      <!-- This is needed so that the bundle generator can
+           operate on the manifest file
+        -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+          </archive>
+        </configuration>
+      </plugin>
+
             <!-- Configure maven-bundle-plugin to generate OSGi manifest.
                  Please note: we use the manifest goal only and not the bundle goal.
                   The bundle goal can lead to very surprising results if the
@@ -457,14 +585,6 @@
                     <!-- By default, we don't export anything.
                     -->
                     <Export-Package></Export-Package>
-                    <!-- Since, we are in a top level pom and
-                         we we don't want it to be active for plain jar type artifacts,
-                         enable the plugin for hk2-jar and bundle packaging type only,
-                    -->
-                    <supportedProjectTypes>
-                        <supportedProjectType>hk2-jar</supportedProjectType>
-                        <supportedProjectType>bundle</supportedProjectType>
-                    </supportedProjectTypes>
                     <instructions>
                         <!-- Read all the configuration from osgi.bundle file, if it exists.
                              See Felix-699 to find out why we use ${basedir}.
@@ -510,17 +630,6 @@
             </plugin>
             <plugin>
                 <groupId>org.glassfish.hk2</groupId>
-                <artifactId>hk2-maven-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <archive>
-                        <!-- Use the manifest.mf produced by maven-bundle-plugin:manifest -->
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.glassfish.hk2</groupId>
                 <artifactId>osgiversion-maven-plugin</artifactId>
                 <executions>
                     <!-- Since we don't want qualifier like b05 or SNAPSHOT to appear
@@ -541,16 +650,6 @@
                 </executions>
             </plugin>
 
-            <!--
-                Require the maven archiver release 2.4 which has enhancements needed in
-                appclient/client/acc-standalone.  For consistency, use the
-                same release throughout the build.
-            -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-		 <version>2.4</version>
-            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
@@ -629,7 +728,33 @@
             </dependency>
             <dependency>
                 <groupId>org.glassfish.hk2</groupId>
-                <artifactId>hk2-core</artifactId>
+                <artifactId>config-types</artifactId>
+                <version>${hk2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.hk2</groupId>
+                <artifactId>hk2-config</artifactId>
+                <version>${hk2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.hk2</groupId>
+                <artifactId>hk2-locator</artifactId>
+                <version>${hk2.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.felix</groupId>
+                        <artifactId>org.apache.felix.bundlerepository</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.hk2</groupId>
+                <artifactId>hk2-runlevel</artifactId>
+                <version>${hk2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.hk2</groupId>
+                <artifactId>core</artifactId>
                 <version>${hk2.version}</version>
             </dependency>
             <dependency>
@@ -646,23 +771,15 @@
                         <groupId>org.apache.felix</groupId>
                         <artifactId>org.apache.felix.bundlerepository</artifactId>
                     </exclusion>
-                </exclusions>
+                </exclusions>                
             </dependency>
+
             <dependency>
                 <groupId>org.glassfish.hk2</groupId>
                 <artifactId>stax-osgi</artifactId>
                 <version>${hk2.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.glassfish.hk2</groupId>
-                <artifactId>auto-depends</artifactId>
-                <version>${hk2.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.hk2</groupId>
-                <artifactId>config-types</artifactId>
-                <version>${hk2.version}</version>
-            </dependency>
+
             <dependency>
               <groupId>org.glassfish</groupId>
               <artifactId>javax.faces</artifactId>
@@ -930,6 +1047,11 @@
                 <groupId>org.glassfish.jersey.media</groupId>
                 <artifactId>jersey-media-multipart</artifactId>
                 <version>${jersey.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>javax.ws.rs-api</artifactId>
+                <version>2.0-m09</version>
             </dependency>
             <dependency>
                 <groupId>com.sun.faces.extensions</groupId>
@@ -1372,10 +1494,25 @@
                 <artifactId>cglib</artifactId>
                 <version>${hk2.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.glassfish.hk2</groupId>
+                <artifactId>hk2-junitrunner</artifactId>
+                <version>${hk2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bsc.maven</groupId>
+                <artifactId>maven-processor-plugin</artifactId>
+                <version>2.0.4</version>
+            </dependency>
           <dependency>
             <groupId>org.glassfish.annotations</groupId>
             <artifactId>logging-annotation-processor</artifactId>
             <version>${logging-annotation-processor.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
           </dependency>
         </dependencies>
     </dependencyManagement>
